# stats-compass

./: .gitignore  CHANGELOG.md  CNAME  DEPLOYMENT.md  DS Auto Insights — where we are, why, and what’s next.txt  Dockerfile  PM Data Tool Roadmap.txt  PM Data Tool Use Cases.txt  README.md  REFACTOR_ADVICE.md  RELEASE_NOTES.md  create_test_data.py  docker-compose.yml  ds_auto_insights_plan.txt  index.html  index.js  package.json  pyproject.toml  requirements.txt  robots.txt  sitemap.xml  tailwind.config.js  test_chart_fix.py  test_feature_importance_fixed.py  test_linear_regression.py
.devcontainer/: devcontainer.json
css/: index.css
docs/: README.md
ds_auto_insights/: Housing.xlsx  __init__.py  analysis_export.md  app.py  auth.py  ds_auto_insights_plan.txt  export_utils.py  exporter.py  mcp_tools.py  narrative.py  planner.py  planner_mcp.py  smart_suggestions.py  util.py
ds_auto_insights/tools/: __init__.py  chart_tools.py  data_cleaning_tools.py  exploration_tools.py  ml_evaluation_tools.py  ml_regression_tools.py  ml_regression_tools_backup.py  statistical_test_tools.py  statistical_tools.py
ds_auto_insights/utils/: __init__.py  analysis.py  data_cleaning.py  data_loading.py  export_utils.py  token_tracking.py  visualization.py
examples/: analysis_report_Bukayo_Saka_7322.csv_20250829_2309.md  session_data_Bukayo_Saka_7322.csv_20250829_2321.json
stats_compass/: __init__.py  api_key_auth.py  app.py  auth.py  config.py  constants.py  planner_mcp.py  smart_suggestions.py  usage_limits.py
tests/: test_ml_tools_smart_outputs.py
(+34 files in other folders)
