[tool.poetry]
name = "stats-compass"
version = "0.1.0"
description = ""
authors = ["togunbiyi1 <olatunjiogunbiyi@googlemail.com>"]
readme = "README.md"
packages = [
  { include = "stats_compass" }
]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.3.1"
fastapi = "^0.116.1"
openai = "^1.97.1"
python-multipart = "^0.0.20"
uvicorn = "^0.35.0"
python-dotenv = "^1.1.1"
streamlit = "^1.47.1"
tabulate = "^0.9.0"
langchain = "^0.3.27"
langchain-openai = "^0.3.32"
matplotlib = "^3.10.5"
plotly = "^6.3.0"
markdown = "^3.8.2"
pillow = "^11.3.0"
kaleido = "^1.0.0"
reportlab = "^4.4.3"
openpyxl = "^3.0.0"
xlrd = "^2.0.0"
tiktoken = "^0.8.0"
psutil = "^7.1.0"
scipy = "^1.16.2"
scikit-learn = "^1.7.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
